added IdentifyMigrateTemplate